change title and fix sidebar overflow

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -1,5 +1,9 @@
 .carousel {
+  height: 500px;
   .slick-dots {
       position: unset;
   }
+  .slick-slide {
+    height: 500px;
+ }
 }
